# medical-doc-extractor

./: .cursorrules  .env  .gitignore  Dockerfile  POLICY_VALIDATION_FIX_SUMMARY.md  TEST_ORGANIZATION_SUMMARY.md  docker-compose.test.yml  docker-compose.yml  docker-compose_gpu.yml  fix_admission_date.py  fix_hardcoded_dates.py  policy_rules_list.py  project.yaml  pyproject.toml  regenerate_validation.py  requirements.txt  restart-docker.sh  run_pipeline.py  start-docker.sh  test_all_rules.py  test_co_payment_fix.py  test_document_inclusion.py  test_llm_extraction_debug.py  test_llm_input.py  test_onboarding_inclusion.py  test_status_logic.py  test_sync_validation.py  test_text_report.py  test_validation_with_admission_date.py
app/: accuracy_metrics.py  directory_scanner.py  document_processor.py  gemini_extract.py  llm_config.py  llm_provider.py  loader.py  main.py  main_configurable.py  main_fixed.py  mistral_extract.py  openai_extract.py  policy_classifier.py  policy_report_generator.py  policy_rules.py  prompt_retrieve_text.py  prompt_system.py  prompts.py  prompts_backup.py  prompts_enhanced.py  prompts_old.py  schemas.py  text_extractor.py  utils.py  validation.py
docs/: ADMISSION_DATE_ISSUE_RESOLUTION.md  DATE_EXTRACTION_SUMMARY.md  ENHANCED_DATE_FORMATS_SUMMARY.md  REQUIREMENTS.md  TASKS.md  TESTING.md  USER_GUIDE.md
processed/: all_processed.json  llm_ready.json
tests/: README.md  __init__.py  run_tests_docker.sh  test_accuracy_metrics.py  test_admission_date_extraction.py  test_admission_extraction_simple.py  test_all_docker.py  test_date_extraction.py  (+20 more)
(+5 files in other folders)
